# hotels-cpp

./: .gitignore  CMakeLists.txt  CODE_RUNNER_SETUP.md  QUICKSTART.md  README.md  build.sh  compile_direct.sh
include/: database.h  html_generator.h  models.h
src/: main.cpp
